--- a/faculty.html
+++ b/faculty.html
@@ -161,7 +161,7 @@
 
     <div id="div1">
         <b><span>
-                <img src="learn2.png" alt="iictmsl" height="220px">
+                <img src="learn2.png" alt="GDSC NiT" height="220px">
                 
                <center> <h1 id="title" style="color: aliceblue; text-align: center;"><u>OUR FACULTY</u></h1></center>
             </span></b>
@@ -184,8 +184,7 @@
                 <img src="p1.png" width="200px">
             </div>
             <div class="text">
-                <h3 style="color: aliceblue;">Meghdut Roy Chowdhury
-                    Director of Global Operations, Techno India Group</h1>
+                <h3 style="color: aliceblue;">MR X</h1>
             </div>
         </div>
 
@@ -194,8 +193,7 @@
                 <img src="p2.png" width="200">
             </div>
             <div class="text">
-                <h3 style="color: aliceblue;"> Laravoire
-                    Sustainability Director, Techno India Group
+                <h3 style="color: aliceblue;"> MR A
                 </h3>
             </div>
         </div>
@@ -204,8 +202,7 @@
                 <img src="p3.png" width="200">
             </div>
             <div class="text">
-                <h3 style="color: aliceblue;"> Dr.Avijit Kar
-                    Principal & Director, TMSL
+                <h3 style="color: aliceblue;"> MS B
                 </h3>
             </div>
         </div>
@@ -215,8 +212,7 @@
                 <img src="p4.png" width="200">
             </div>
             <div class="text">
-                <h3 style="color: aliceblue;"> Soumitra Sasmal
-                    Registrar, TMSL</h3>
+                <h3 style="color: aliceblue;"> MS C</h3>
             </div>
         </div>
 
@@ -226,8 +222,7 @@
                 <img src="p5.png" width="200">
             </div>
             <div class="text">
-                <h3 style="color: aliceblue;">Dr.Lakshmishri Roy
-                    President, IIC TMSL</h3>
+                <h3 style="color: aliceblue;">MR D</h3>
             </div>
         </div>
         
